--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./TFG/src:/var/www/html
+      - ./src:/var/www/html
     networks:
       - app-network
 
