--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./src:/var/www/html
     networks:
       - app-network
+    restart: always
   mysql:
     image: mysql:latest
     environment:
