--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,5 +1,3 @@
 FROM php:7.4-apache
 
-RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
-
-COPY src/ /var/www/html/
+RUN docker-php-ext-install mysqli pdo pdo_mysql
