--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - 8080:80
     environment:
       - PMA_HOST=mysql
-      - PMA_USER=ec2-user
+      - PMA_USER=root
       - PMA_PASSWORD=toor
     networks:
       - app-network
