--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -9,8 +9,5 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Establece el directorio de trabajo
 WORKDIR /var/www/html
 
-# Copia los archivos de configuración de la aplicación
-COPY ./src /var/www/html
-
-# Instala PHPMailer utilizando Composer
-RUN composer require phpmailer/phpmailer
+# Instala las dependencias utilizando Composer
+RUN composer install --no-dev --optimize-autoloader
