--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -10,4 +10,4 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 WORKDIR /var/www/html
 
 # Instala las dependencias utilizando Composer
-RUN composer install --no-dev --optimize-autoloader
+RUN composer install
