--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -9,5 +9,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Establece el directorio de trabajo
 WORKDIR /var/www/html
 
+# Copia el archivo composer.json y composer.lock al contenedor
+COPY composer.json composer.lock ./
+
 # Instala las dependencias utilizando Composer
-RUN composer install
+RUN composer install --no-dev --optimize-autoloader
