--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -4,7 +4,7 @@ FROM php:7.4-apache
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
 # Instala Composer (Administrador de paquetes de PHP)
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS http://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Establece el directorio de trabajo
 WORKDIR /var/www/html
