--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y sendmail
 RUN echo "hostname" > /etc/mail/local-host-names
 
 # Configura el archivo hosts para incluir la dirección IP del servidor
-RUN echo "3.225.229.160 hostname" >> /etc/hosts
+RUN sudo echo "3.225.229.160 hostname" >> /etc/hosts
 
 # Reinicia el servicio sendmail
 RUN service sendmail restart
