--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - 80:80
     volumes:
       - ./src:/var/www/html
+      - ./hosts:/etc/hosts
     networks:
       - app-network
     restart: always
@@ -17,8 +18,6 @@ services:
       - PHP_INI_SENDMAIL_PATH=sendmail -t -i
     depends_on:
       - sendmail
-    extra_hosts:
-      - "hostname:3.225.229.160"
 
   sendmail:
     image: namshi/smtp
